force-app/main/default/objects/vlocity_cmt__FulfilmentRequestLine__c/fields/Onetime_Prorate_Completed__c.field-meta.xml
<CustomField>
    <fullName>Onetime_Prorate_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Onetime Prorate Completed?</label>
    <type>Checkbox</type>
</CustomField>