force-app/main/default/objects/vlocity_cmt__FulfilmentRequestLine__c/fields/Price_Validate_Completed__c.field-meta.xml
<CustomField>
    <fullName>Price_Validate_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Price Validate Completed ?</label>
    <type>Checkbox</type>
</CustomField>