force-app/main/default/objects/vlocity_cmt__FulfilmentRequestLine__c/fields/Tax_Calculation_Completed__c.field-meta.xml
<CustomField>
    <fullName>Tax_Calculation_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Calculation Completed?</label>
    <type>Checkbox</type>
</CustomField>