force-app/main/default/objects/vlocity_cmt__FulfilmentRequestLine__c/fields/Tax_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Tax_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Deleted ?</label>
    <type>Checkbox</type>
</CustomField>